testcases/collectCases/invalidCases/suffix05Test.py
# _*_ coding: utf-8 _*_
# @File : suffix05Test.py
# @Author : isquz
# @Time : 2020/8/29 13:48 
# @desc :

def test_out_of_Testclass5():
    assert True

def testOut_of_Testclass5():
    assert True

def out_of_Testclass5_test():
    assert True

def out_of_Testclass5test():
    assert True

def between_test_out_of_TestClass5():
    assert True


class Testclass5():

    def testIn_Testclass5(self):
        assert True

    def test_in_Testclass5(self):
        assert True

    def in_Testclass5_test(self):
        assert True

    def in_Testclass5test(self):
        assert True

class cls5Test():

    def testIn_non_Testclass5(self):
        assert True

    def test_in_non_Testclass5(self):
        assert True

    def in_non_Testclass5_test(self):
        assert True

    def in_non_Testclass5test(self):
        assert True